GearsetPOC/force-app/main/default/objects/Journal_Type__c/Journal_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Journal Type</label>
</CustomObject>