GearsetPOC/force-app/main/default/objects/Journal_Type__c/fields/Journal_Type__c.field-meta.xml
<CustomField>
    <fullName>Journal_Type__c</fullName>
    <label>Journal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>